Fix spacing on information title

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     padding: 50px;
 }
@@ -134,6 +134,12 @@ a {
     border-radius: 10px;
     width: 150px;
     height: 150px;
+}
+
+h2.information-title {
+    font-size: 36px;
+    margin: 0px;
+    margin-bottom: 50px;
 }
 
 /*CALL TO ACTION*/
@@ -182,7 +188,9 @@ a {
 .quote {
     font-size: 36px;
     font-style: italic;
-    color: #1F2937;
+    color: #34455b;
+    /*how can I make this lighter? I tried font-weight*/
+    font-weight: 200;
 }
 
 .quotee {
@@ -191,6 +199,7 @@ a {
     color: #1F2937;
     font-weight: bold;
 }
+
 
 /*FOOTER*/
 
